--- a/src/index.html
+++ b/src/index.html
@@ -3,12 +3,11 @@
   <head>
     <meta charSet="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" type="text/css" href="index.css">
     <title>MyApp</title>
   </head>
   <body>
-    <script src="index.js"></script>
-    <script>
+    <script src="index.js" type="text/javascript"></script>
+    <script type="text/javascript">
       Elm.Main.fullscreen();
     </script>
   </body>
