--- a/src/index.html
+++ b/src/index.html
@@ -8,8 +8,8 @@
   <body>
     <div id="app"></div>
 
-    <script src="index.js" type="text/javascript"></script>
-    <script type="text/javascript">
+    <script src="index.js"></script>
+    <script>
       Elm.Main.init({
         node: document.getElementById('app')
       });
